--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
 					</div>
 				</section>
 				<section>
-					<div class="directionRow">
-						<a class="button buttonDrakGreyColor" href="documents/planning">Télécharger le planning de cours</a>
+					<h2>Découvrez nos cours !</h2>
+					<div class="directionRow ">
+						<a class="button buttonMainColor buttonHighlight buttonRounded" href="documents/planning-adultes.pdf">Télécharger le planning de cours pour adultes</a>
+					</div>
+					<div class="directionRow ">
+						<a class="button buttonSecondColor buttonHighlight buttonRounded" href="documents/planning-enfants.pdf">Télécharger le planning de cours pour enfants</a>
 					</div>
 				</section>
 			</main>
