--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 						</article>
 					</div>
 				</section>
-				<section>
+				<section class="sectionLightGreyBackground">
 					<h2>Découvrez nos cours !</h2>
 					<div class="directionRow ">
-						<a class="button buttonMainColor buttonHighlight buttonRounded" href="documents/planning-adultes.pdf">Télécharger le planning de cours pour adultes</a>
+						<a class="button buttonMainColor buttonHighlight buttonRounded" target="_blank" href="documents/planning-adultes.pdf">Télécharger le planning de cours pour adultes</a>
 					</div>
 					<div class="directionRow ">
-						<a class="button buttonSecondColor buttonHighlight buttonRounded" href="documents/planning-enfants.pdf">Télécharger le planning de cours pour enfants</a>
+						<a class="button buttonSecondColor buttonHighlight buttonRounded" target="_blank" href="documents/planning-enfants.pdf">Télécharger le planning de cours pour enfants</a>
 					</div>
 				</section>
 			</main>
